// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ItwCredentialClaimsCard collapsible header should match the snapshot 1`] = `
<View
  style={
    [
      {
        "borderCurve": "continuous",
        "borderRadius": 8,
        "borderWidth": 1,
      },
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E8EBF1",
      },
    ]
  }
>
  <View
    accessibilityLabel="Tessera Sanitaria"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": false,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "borderBottomLeftRadius": 7,
            "borderBottomRightRadius": 7,
            "borderTopLeftRadius": 7,
            "borderTopRightRadius": 7,
            "overflow": "hidden",
          },
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "padding": 16,
          },
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "padding": 16,
          },
          {
            "borderBottomLeftRadius": 7,
            "borderBottomRightRadius": 7,
            "borderTopLeftRadius": 7,
            "borderTopRightRadius": 7,
            "overflow": "hidden",
          },
        ]
      }
    >
      <BVLinearGradient
        colors={
          [
            4294111986,
            4278203289,
          ]
        }
        endPoint={
          {
            "x": 0.5,
            "y": 1,
          }
        }
        locations={null}
        startPoint={
          {
            "x": 0.5,
            "y": 0,
          }
        }
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <Text
        allowFontScaling={true}
        dynamicTypeRamp="headline"
        maxFontSizeMultiplier={1.5}
        style={
          [
            {},
            {
              "color": "#0E0F13",
              "fontFamily": "Titillio",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "600",
              "lineHeight": 24,
            },
            {
              "flexGrow": 1,
              "flexShrink": 1,
            },
          ]
        }
      >
        Tessera Sanitaria
      </Text>
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {},
          }
        }
        jestInlineStyle={
          [
            {
              "marginLeft": 16,
            },
            {},
          ]
        }
        style={
          [
            {
              "marginLeft": 16,
            },
            {},
          ]
        }
      >
        <RNSVGSvgView
          accessibilityElementsHidden={true}
          accessibilityLabel=""
          accessible={false}
          align="xMidYMid"
          bbHeight={24}
          bbWidth={24}
          color="#555C70"
          focusable={false}
          height={24}
          importantForAccessibility="no-hide-descendants"
          meetOrSlice={0}
          minX={0}
          minY={0}
          pointerEvents="none"
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 24,
                "width": 24,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
          width={24}
        >
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
          >
            <RNSVGPath
              clipRule={0}
              d="M18.7071 8.29289c.3905.39053.3905 1.02369 0 1.41422l-6 5.99999c-.3905.3905-1.0237.3905-1.4142 0L5.29289 9.70711c-.39052-.39053-.39052-1.02369 0-1.41422.39053-.39052 1.02369-.39052 1.41422 0L12 13.5858l5.2929-5.29291c.3905-.39052 1.0237-.39052 1.4142 0Z"
              fill={
                {
                  "type": 2,
                }
              }
              fillRule={0}
              propList={
                [
                  "fill",
                  "fillRule",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={{}}
    style={
      [
        {},
      ]
    }
  >
    <View
      onLayout={[MockFunction]}
      style={
        [
          {},
          {
            "width": "100%",
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        dynamicTypeRamp="body"
        maxFontSizeMultiplier={1.5}
        style={
          [
            {},
            {
              "color": "#555C70",
              "fontFamily": "Titillio",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 24,
            },
          ]
        }
      >
        Card content
      </Text>
    </View>
  </View>
</View>
`;

exports[`ItwCredentialClaimsCard static header should match the snapshot 1`] = `
<View
  style={
    [
      {
        "borderCurve": "continuous",
        "borderRadius": 8,
        "borderWidth": 1,
      },
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E8EBF1",
      },
    ]
  }
>
  <View
    accessibilityRole="header"
    style={
      {
        "borderTopLeftRadius": 7,
        "borderTopRightRadius": 7,
        "overflow": "hidden",
        "padding": 16,
      }
    }
  >
    <BVLinearGradient
      colors={
        [
          4294111986,
          4278203289,
        ]
      }
      endPoint={
        {
          "x": 0.5,
          "y": 1,
        }
      }
      locations={null}
      startPoint={
        {
          "x": 0.5,
          "y": 0,
        }
      }
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <Text
      allowFontScaling={true}
      dynamicTypeRamp="headline"
      maxFontSizeMultiplier={1.5}
      style={
        [
          {},
          {
            "color": "#0E0F13",
            "fontFamily": "Titillio",
            "fontSize": 16,
            "fontStyle": "normal",
            "fontWeight": "600",
            "lineHeight": 24,
          },
          {
            "flexShrink": 1,
          },
        ]
      }
    >
      Tessera Sanitaria
    </Text>
  </View>
  <Text
    allowFontScaling={true}
    dynamicTypeRamp="body"
    maxFontSizeMultiplier={1.5}
    style={
      [
        {},
        {
          "color": "#555C70",
          "fontFamily": "Titillio",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 24,
        },
      ]
    }
  >
    Card content
  </Text>
</View>
`;
